[package]
name = "yandex-cloud-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
jsonwebtoken = { version = "10.3.0", features = ["use_pem"] }
prost = "0.14.3"
prost-types = "0.14.1"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tonic = "0.14.5"
tonic-prost = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = "1.50.0"

[build-dependencies]
tonic-prost-build = "0.14.5"
