[package]
name = "yandex-cloud-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["use_pem", "rust_crypto"] }
prost = "0.14.3"
prost-types = "0.14.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tonic = { version = "0.14.5", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
